# codex-test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
src/codex_test/: __init__.py  main.py
tests/: test_main.py
